basic style for messages

--- a/src/containers/Chat/Chat.css
+++ b/src/containers/Chat/Chat.css
@@ -1,4 +1,7 @@
 .chatRoot {
+  display: flex;
+  flex-direction: column;
+  /* align-items: stretch; */
   flex-grow: 5;
   border: 2px solid red;
   min-height: 600px;
