--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -1,17 +1,22 @@
 .ownerMessage {
-  justify-content: flex-end;
+  align-self: flex-end;
   background-color: green;
-  border-radius: 15%;
+  border-radius: 15% 15% 0% 15%;
 }
 
 .comingMessage {
-  justify-content: flex-start;
+  align-self: flex-start;
   background-color: grey;
-  border-radius: 15%;
+  border-radius: 15% 15% 15% 0%;
+}
+
+.basicMessage {
+  padding: 4px 8px;
 }
 
 .messageRoot {
+  margin: 10px;
   display: flex;
-  flex-direction: row;
-  max-width: 100%;
+  flex-direction: column;
+  align-content: flex-end;
 }
