--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -1,17 +1,42 @@
 .ownerMessage {
   align-self: flex-end;
   background-color: green;
-  border-radius: 15% 15% 0% 15%;
+  border-radius: 50% 50% 0% 50%;
+  position: relative;
+}
+
+.ownerMessage:before {
+  content: '';
+  position: absolute;
+  top: 30px;
+  left: calc(100% - 25px);
+  height: 30px;
+  width: 30px;
+  border-top-right-radius: 50%;
+  box-shadow: 0 -6px 0 0 green;
 }
 
 .comingMessage {
   align-self: flex-start;
   background-color: grey;
-  border-radius: 15% 15% 15% 0%;
+  position: relative;
+  border-radius: 50% 50% 50% 0%;
+}
+
+.comingMessage:before {
+  content: '';
+  position: absolute;
+  top: 30px;
+  left: -5px;
+  height: 30px;
+  width: 30px;
+  border-top-left-radius: 50%;
+  /* background: #000; */
+  box-shadow: 0 -6px 0 0 grey;
 }
 
 .basicMessage {
-  padding: 4px 8px;
+  padding: 6px 12px;
 }
 
 .messageRoot {
